update excel util and jdk version
update poi demo jdk from 1.8 to 21
update testng and log4j version